--- a/plugins/vdm2isa/src/main/resources/document/root.tex
+++ b/plugins/vdm2isa/src/main/resources/document/root.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[runningheads,a4paper]{llncs}
 \usepackage{isabelle,isabellesym}
 
 % further packages required for unusual symbols (see also
@@ -35,11 +35,31 @@
 
 \begin{document}
 
-\title{resources}
+\title{A translation strategy for VDM recursive functions in Isabelle/HOL}
 \author{Leo Freitas}
-\maketitle
 
-\tableofcontents
+%Multiple institutes are typeset as follows:
+\author{Leo Freitas\inst{1}
+}
+%If there are too many authors, use \authorrunning
+% \authorrunning{First Author et al.}
+\authorrunning{ }
+
+\institute{
+School of Computing, Newcastle University, \\
+\email{leo.freitas@newcastle.ac.uk}
+}
+			
+\maketitle
+\setcounter{footnote}{0} 
+\begin{abstract}
+    This paper presents a translation strategy for a variety of VDM recursive functions into Isabelle/HOL. 
+     It extends an ecosystem of other VDM mathematical toolkit extensions, including a translation and proof environment for VDM in Isabelle/HOL~\footnote{\url{https://github.com/leouk/VDM_Toolkit/}}.
+\end{abstract}
+
+\keywords{VSCode, VDM, Isabelle/HOL, Translation, Recursion}
+
+%\tableofcontents
 
 % sane default for proof documents
 \parindent 0pt\parskip 0.5ex
@@ -48,8 +68,8 @@
 \input{session}
 
 % optional bibliography
-%\bibliographystyle{abbrv}
-%\bibliography{root}
+\bibliographystyle{splncs03}
+ \bibliography{root}
 
 \end{document}
 
