--- a/plugins/vdm2isa/src/main/resources/document/root.tex
+++ b/plugins/vdm2isa/src/main/resources/document/root.tex
@@ -1,4 +1,5 @@
-\documentclass[runningheads,a4paper]{llncs}
+%\documentclass[runningheads,a4paper]{llncs}
+\documentclass[11pt,a4paper]{article}
 \usepackage{isabelle,isabellesym}
 
 % further packages required for unusual symbols (see also
@@ -36,28 +37,31 @@
 \begin{document}
 
 \title{A translation strategy for VDM recursive functions in Isabelle/HOL}
-\author{Leo Freitas}
-
+\author{Leo Freitas, Peter Gorm Larsen}
 %Multiple institutes are typeset as follows:
-\author{Leo Freitas\inst{1}
-}
+%\author{Leo Freitas\inst{1} \and Peter Gorm Larsen\inst{2}}
+
 %If there are too many authors, use \authorrunning
 % \authorrunning{First Author et al.}
-\authorrunning{ }
+%\authorrunning{ }
 
-\institute{
-School of Computing, Newcastle University, \\
-\email{leo.freitas@newcastle.ac.uk}
-}
+%\institute{
+%School of Computing, Newcastle University, \\
+%\email{leo.freitas@newcastle.ac.uk}
+%\and 
+%DIGIT, Aarhus University, Department of Engineering, \\
+%Finlandsgade 22, 8200 Aarhus N, Denmark\\
+%\email{pgl@ece.au.dk}
+%}
 			
 \maketitle
 \setcounter{footnote}{0} 
 \begin{abstract}
     This paper presents a translation strategy for a variety of VDM recursive functions into Isabelle/HOL. 
-     It extends an ecosystem of other VDM mathematical toolkit extensions, including a translation and proof environment for VDM in Isabelle/HOL~\footnote{\url{https://github.com/leouk/VDM_Toolkit/}}.
+     It extends an ecosystem of other VDM mathematical toolkit extensions, including a translation and proof environment for VDM in Isabelle/HOL.
 \end{abstract}
 
-\keywords{VSCode, VDM, Isabelle/HOL, Translation, Recursion}
+%\keywords{VSCode, VDM, Isabelle/HOL, Translation, Recursion}
 
 %\tableofcontents
 
