trying out SCT mutual recursion

--- a/plugins/vdm2isa/src/main/resources/document/root.tex
+++ b/plugins/vdm2isa/src/main/resources/document/root.tex
@@ -58,11 +58,12 @@ DIGIT, Aarhus University, Department of Engineering, \\
 \maketitle
 \setcounter{footnote}{0} 
 \begin{abstract}
-    This paper presents a translation strategy for a variety of VDM recursive functions into Isabelle/HOL. 
-     It extends an ecosystem of other VDM mathematical toolkit extensions, including a translation and proof environment for VDM in Isabelle/HOL.
+    This paper presents a translation strategy for a variety of VDM recursive functions into Isabelle/HOL.      
+    It extends an ecosystem of other VDM mathematical toolkit extensions, and a translation 
+    and proof environment for VDM in Isabelle/HOL.
 \end{abstract}
 
-\keywords{VSCode, VDM, Isabelle/HOL, Translation, Recursion}
+\keywords{VDM, Isabelle/HOL, Translation, Recursion, VSCode}
 
 %\tableofcontents
 
