attempting style changes to properly cater for \<^>bold and emph markers which are not displaying properly; neither verbatim

--- a/plugins/vdm2isa/src/main/resources/document/root.tex
+++ b/plugins/vdm2isa/src/main/resources/document/root.tex
@@ -24,8 +24,8 @@
   %\<currency>
 
 % urls in roman style, theory text in math-similar italics
-%\urlstyle{rm}
-\isabellestyle{tt}
+\urlstyle{rm}
+\isabellestyle{it}
 
 % this should be the last package used
 \usepackage{pdfsetup}
