PGL\s comments on recursion paper.

--- a/plugins/vdm2isa/src/main/resources/document/root.tex
+++ b/plugins/vdm2isa/src/main/resources/document/root.tex
@@ -24,7 +24,7 @@
   %\<currency>
 
 % urls in roman style, theory text in math-similar italics
-\urlstyle{rm}
+%\urlstyle{rm}
 \isabellestyle{it}
 
 % this should be the last package used
