--- a/plugins/vdm2isa/pub/sorting/main.tex
+++ b/plugins/vdm2isa/pub/sorting/main.tex
@@ -433,12 +433,13 @@ For the \texttt{UnknonwnTranslateEvent}, VDM-VSCode-wide translation options are
 
 The trafe off for this use case is that errors are handled in tandem and only after a translation request has happened. If the \texttt{CheckCompleteEvent} processing is fast for the loaded project, then that is a preferred route for translation, as it will keep the user informed as the model is developed. Otherwise, translation can take place at the user's request and any remaining issues can be reported and dealt with accordingly.  
 
-For the VDM-VSCode integration, we have strived to keep all three use cases (\ie~VDMJ console, VDM-VSCode DAP console, and VDM-VSCode LSP GUI-reactivity) as independent as possible, as well as reusable as possible. This is important so that each functionality does not need to be re-encoded in ever slightly different ways. This has been achieved through the use of he Linux principle of argument-based command-line execution of the plugin as a the bottom-line for all kinds of interfaces.
+For the VDM-VSCode integration, we have strived to keep all three use cases (\ie~VDMJ console, VDM-VSCode DAP console, and VDM-VSCode LSP GUI-reactivity) as independent as possible, as well as reusable as possible. This is important so that each functionality does not need to be re-encoded in ever slightly different ways. This has been achieved through the use of he Linux principle of argument-based command-line execution of the plugin as a the bottom-line for all kinds of interfaces. 
 
-In practice, this means each plugin responds to specific commands. This is similar to other Linux commands (\eg~)\texttt{git} has commands like \texttt{push}, \textt{pull}, \etc). Various default options are in place, and can be changed by a properties file. The property read and set process is close to VDMJ's own properties file. For VDM-VSCode, the GUI also exposes these properties through its settings interface. Ultimately, the VDM-VSCode plugin makes specific command calls to specific plugins, depending on whether it is part of the LSP's reactive behaviour  (\eg~setting yellow/red squiggles on code locations to show warnings/errors), or part of the DAP's interactive behaviour (\eg~calling specific DAP plugins on the debug console). Correspondingly, the same functionality is available through the VDMJ console via the command line. 
+In practice, this means each plugin responds to specific commands. This is similar to other Linux commands (\eg~)\texttt{git} has commands like \texttt{push}, \textt{pull}, \etc). Various default options are in place, and can be changed by a properties file. The property read and set process is close to VDMJ's own properties file. For VDM-VSCode, the GUI also exposes these properties through its settings interface. Ultimately, the VDM-VSCode plugin makes specific command calls to specific plugins, depending on whether it is part of the LSP's reactive behaviour  (\eg~setting yellow/red squiggles on code locations to show warnings/errors), or part of the DAP's interactive behaviour (\eg~calling specific DAP plugins on the debug console). Correspondingly, the same functionality is available through the VDMJ console via the command line. Output of translation is saved to \texttt{./.generated/isabelle} by default, yet users can set it to any directory of their choice. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Applications and Examples}\label{sec:Examples}
+
 
 Other examples of use are provided in the \texttt{ISQ.vdmsl} distribution~\footnote{\url{https://github.com/leouk/VDM_Toolkit/}}. They show various ISQ measurement systems in practical use.
 
