--- a/plugins/vdm2isa/pub/sorting/order.bib
+++ b/plugins/vdm2isa/pub/sorting/order.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-%% Created for Leo Freitas at 2022-12-23 11:36:41 +0000 
+%% Created for Leo Freitas at 2022-12-29 10:47:33 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{emv2,
+	author = {Leo Freitas},
+	booktitle = {21st Brazilian Symposium in Formal Methods, SBMF},
+	date-added = {2022-12-29 10:47:32 +0000},
+	date-modified = {2022-12-29 10:47:32 +0000},
+	pages = {26-30},
+	title = {VDM at Large: Modelling the EMV 2nd Generation Kernel},
+	year = {2018}}
 
 @article{NQueens,
 	author = {Peter Naur},
